# strava-mcp-agent

./: .gitignore  LICENSE  README.md  get_token.py  pyproject.toml
.claude/: settings.local.json
docs/: index.html
src/strava_mcp/: __init__.py  __main__.py  get_token.py  memory.py  server.py  trends.py
